// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FinishGame /> should match snapshot and start with step 0 1`] = `
<Segment
  basic={true}
>
  <ModalContent>
    <Grid
      columns={2}
    >
      <GridRow>
        <GridColumn
          computer={6}
          mobile={4}
          verticalAlign="middle"
        >
          <StepGroup
            size="mini"
            vertical={true}
          >
            <Step
              active={true}
              completed={false}
            >
              <Icon
                as="i"
                name="info"
                size="small"
              />
              <Responsive
                as={[Function]}
                minWidth={992}
              >
                <StepTitle>
                  Directions
                </StepTitle>
              </Responsive>
            </Step>
            <Step
              active={false}
              completed={false}
            >
              <Icon
                as="i"
                name="hashtag"
                size="small"
              />
              <Responsive
                as={[Function]}
                minWidth={992}
              >
                <StepTitle>
                  Hashtag
                </StepTitle>
              </Responsive>
            </Step>
            <Step
              active={false}
              completed={false}
            >
              <Icon
                as="i"
                name="twitter"
                size="small"
              />
              <Responsive
                as={[Function]}
                minWidth={992}
              >
                <StepTitle>
                  Searching
                </StepTitle>
              </Responsive>
            </Step>
            <Step
              active={false}
              completed={false}
            >
              <Icon
                as="i"
                loading={false}
                name="spinner"
                size="small"
              />
              <Responsive
                as={[Function]}
                minWidth={992}
              >
                <StepTitle>
                  Processing
                </StepTitle>
              </Responsive>
            </Step>
            <Step
              active={false}
              completed={false}
            >
              <Icon
                as="i"
                name="pointing down"
                size="small"
              />
              <Responsive
                as={[Function]}
                minWidth={992}
              >
                <StepTitle>
                  Confirm
                </StepTitle>
              </Responsive>
            </Step>
          </StepGroup>
        </GridColumn>
        <GridColumn
          computer={10}
          mobile={12}
        >
          <RenderStep
            fetchImages={[Function]}
            hashtag="656liv4manure0"
            imageSource=""
            images={null}
            loading={false}
            onResults={[Function]}
            processer={
              TesseractWorker {
                "_currentJob": null,
                "_queue": Array [],
                "create": [Function],
                "version": "1.0.10",
                "worker": null,
                "workerOptions": Object {
                  "langPath": "http://cdn.rawgit.com/naptha/tessdata/gh-pages/3.02/",
                  "workerPath": "/Users/scotthorn/repos/Game-Manager-V3/node_modules/tesseract.js/src/node/worker.js",
                },
              }
            }
            step={0}
          />
        </GridColumn>
      </GridRow>
    </Grid>
  </ModalContent>
  <Segment
    basic={true}
    floated="right"
  >
    <ModalActions>
      <Button
        as="button"
        basic={true}
        color="red"
        inverted={true}
        onClick={[Function]}
      >
        <Icon
          as="i"
          name="remove"
        />
         Cancel
      </Button>
      <Button
        as="button"
        color="green"
        disabled={false}
        inverted={true}
        onClick={[Function]}
      >
        Next
      </Button>
    </ModalActions>
  </Segment>
  <Header
    color="teal"
    content="Results"
  />
  <Image
    as="img"
    fluid={true}
    src=""
    ui={true}
  />
</Segment>
`;

exports[`<FinishGame /> should render a checkmark Icon and the word "Verify" if the current step is 4 1`] = `
<Segment
  basic={true}
>
  <ModalContent>
    <Grid
      columns={2}
    >
      <GridRow>
        <GridColumn
          computer={6}
          mobile={4}
          verticalAlign="middle"
        >
          <StepGroup
            size="mini"
            vertical={true}
          >
            <Step
              active={true}
              completed={false}
            >
              <Icon
                as="i"
                name="info"
                size="small"
              />
              <Responsive
                as={[Function]}
                minWidth={992}
              >
                <StepTitle>
                  Directions
                </StepTitle>
              </Responsive>
            </Step>
            <Step
              active={false}
              completed={false}
            >
              <Icon
                as="i"
                name="hashtag"
                size="small"
              />
              <Responsive
                as={[Function]}
                minWidth={992}
              >
                <StepTitle>
                  Hashtag
                </StepTitle>
              </Responsive>
            </Step>
            <Step
              active={false}
              completed={false}
            >
              <Icon
                as="i"
                name="twitter"
                size="small"
              />
              <Responsive
                as={[Function]}
                minWidth={992}
              >
                <StepTitle>
                  Searching
                </StepTitle>
              </Responsive>
            </Step>
            <Step
              active={false}
              completed={false}
            >
              <Icon
                as="i"
                loading={false}
                name="spinner"
                size="small"
              />
              <Responsive
                as={[Function]}
                minWidth={992}
              >
                <StepTitle>
                  Processing
                </StepTitle>
              </Responsive>
            </Step>
            <Step
              active={false}
              completed={false}
            >
              <Icon
                as="i"
                name="pointing down"
                size="small"
              />
              <Responsive
                as={[Function]}
                minWidth={992}
              >
                <StepTitle>
                  Confirm
                </StepTitle>
              </Responsive>
            </Step>
          </StepGroup>
        </GridColumn>
        <GridColumn
          computer={10}
          mobile={12}
        >
          <RenderStep
            fetchImages={[Function]}
            hashtag="656liv4manure0"
            imageSource=""
            images={null}
            loading={false}
            onResults={[Function]}
            processer={
              TesseractWorker {
                "_currentJob": null,
                "_queue": Array [],
                "create": [Function],
                "version": "1.0.10",
                "worker": null,
                "workerOptions": Object {
                  "langPath": "http://cdn.rawgit.com/naptha/tessdata/gh-pages/3.02/",
                  "workerPath": "/Users/scotthorn/repos/Game-Manager-V3/node_modules/tesseract.js/src/node/worker.js",
                },
              }
            }
            step={0}
          />
        </GridColumn>
      </GridRow>
    </Grid>
  </ModalContent>
  <Segment
    basic={true}
    floated="right"
  >
    <ModalActions>
      <Button
        as="button"
        basic={true}
        color="red"
        inverted={true}
        onClick={[Function]}
      >
        <Icon
          as="i"
          name="remove"
        />
         Cancel
      </Button>
      <Button
        as="button"
        color="green"
        disabled={false}
        inverted={true}
        onClick={[Function]}
      >
        Next
      </Button>
    </ModalActions>
  </Segment>
  <Header
    color="teal"
    content="Results"
  />
  <Image
    as="img"
    fluid={true}
    src=""
    ui={true}
  />
</Segment>
`;

exports[`<FinishGame /> should render a checkmark Icon and the word "Verify" if the current step is 4 2`] = `
<Segment
  basic={true}
>
  <ModalContent>
    <Grid
      columns={2}
    >
      <GridRow>
        <GridColumn
          computer={6}
          mobile={4}
          verticalAlign="middle"
        >
          <StepGroup
            size="mini"
            vertical={true}
          >
            <Step
              active={false}
              completed={true}
            >
              <Icon
                as="i"
                name="info"
                size="small"
              />
              <Responsive
                as={[Function]}
                minWidth={992}
              >
                <StepTitle>
                  Directions
                </StepTitle>
              </Responsive>
            </Step>
            <Step
              active={false}
              completed={true}
            >
              <Icon
                as="i"
                name="hashtag"
                size="small"
              />
              <Responsive
                as={[Function]}
                minWidth={992}
              >
                <StepTitle>
                  Hashtag
                </StepTitle>
              </Responsive>
            </Step>
            <Step
              active={false}
              completed={true}
            >
              <Icon
                as="i"
                name="twitter"
                size="small"
              />
              <Responsive
                as={[Function]}
                minWidth={992}
              >
                <StepTitle>
                  Searching
                </StepTitle>
              </Responsive>
            </Step>
            <Step
              active={false}
              completed={true}
            >
              <Icon
                as="i"
                loading={false}
                name="spinner"
                size="small"
              />
              <Responsive
                as={[Function]}
                minWidth={992}
              >
                <StepTitle>
                  Processing
                </StepTitle>
              </Responsive>
            </Step>
            <Step
              active={true}
              completed={false}
            >
              <Icon
                as="i"
                name="pointing down"
                size="small"
              />
              <Responsive
                as={[Function]}
                minWidth={992}
              >
                <StepTitle>
                  Confirm
                </StepTitle>
              </Responsive>
            </Step>
          </StepGroup>
        </GridColumn>
        <GridColumn
          computer={10}
          mobile={12}
        >
          <RenderStep
            fetchImages={[Function]}
            hashtag="656liv4manure0"
            imageSource=""
            images={null}
            loading={false}
            onResults={[Function]}
            processer={
              TesseractWorker {
                "_currentJob": null,
                "_queue": Array [],
                "create": [Function],
                "version": "1.0.10",
                "worker": null,
                "workerOptions": Object {
                  "langPath": "http://cdn.rawgit.com/naptha/tessdata/gh-pages/3.02/",
                  "workerPath": "/Users/scotthorn/repos/Game-Manager-V3/node_modules/tesseract.js/src/node/worker.js",
                },
              }
            }
            step={4}
          />
        </GridColumn>
      </GridRow>
    </Grid>
  </ModalContent>
  <Segment
    basic={true}
    floated="right"
  >
    <ModalActions>
      <Button
        as="button"
        basic={true}
        color="red"
        inverted={true}
        onClick={[Function]}
      >
        <Icon
          as="i"
          name="remove"
        />
         Cancel
      </Button>
      <Button
        as="button"
        color="green"
        disabled={false}
        inverted={true}
        onClick={[Function]}
      >
        <Icon
          as="i"
          name="checkmark"
        />
        Verify
      </Button>
    </ModalActions>
  </Segment>
  <Header
    color="teal"
    content="Results"
  />
  <Image
    as="img"
    fluid={true}
    src=""
    ui={true}
  />
</Segment>
`;
